# Calculadora-FLTK

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md
.cache/clangd/index/: form.cpp.56A88A1012954B73.idx  form.hpp.CE9D38DBED69CECC.idx  main.cpp.C31E58B5D6FBC997.idx  math.cpp.19BCA8ED7FF53BD3.idx  math.hpp.4F6A883F673FA15D.idx  tests.cpp.51063CD796CE1CD8.idx
inc/: form.hpp  math.hpp
src/: CMakeLists.txt  form.cpp  main.cpp  math.cpp
tests/: CMakeLists.txt  tests.cpp
